# Ilab2

./: README.md
cache/: .gitignore  CMakeLists.txt  Makefile  README.md  cache  main.cpp  source.txt
cache/caches/include/: cache.h
cache/dump/: log_cache.txt
cache/include/: cache.h
cache/parser/: CMakeLists.txt
cache/parser/include/: parser.h
cache/parser/src/: parser.cpp
cache/src/: cache.cpp  cache_lfu.cpp  cache_lru.cpp  cache_perfect.cpp  cashe.cpp  main.cpp
cache/tests/: tests.cpp
cache/tests/tests_files/: perfect_test_1.txt  perfect_test_2.txt  small_test_1.txt  small_test_2.txt  small_test_3.txt  small_test_4.txt  small_test_5.txt  small_test_6.txt
cashe/: Makefile  main  main.cpp  source.txt
cashe/dump/: log_cashe.txt
cashe/include/: cashe.h
cashe/src/: cashe.cpp
matrix/: CMakeLists.txt  README.md
matrix/include/: iterator.h  matrix.h
matrix/src/: matrix_det.cpp
matrix/tests/: tests.cpp
matrix/vector/: CMakeLists.txt
matrix/vector/include/: vector.h
matrix/vector/tests/: tests.cpp
tree/: CMakeLists.txt
tree/include/: tree.h
tree/tests/: tests.cpp
